--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: c
 
+python:
+  - "2.7"
+
 env:
   global:
     - LUAROCKS=2.2.0
@@ -14,11 +17,13 @@ branches:
     - master
 
 before_install:
+  - sudo pip install autobahntestsuite
   - bash .travis/setup_lua.sh
   - bash .travis/setup_uv.sh
+  - sudo luarocks install luacov-coveralls
+  - sudo luarocks install luasocket
   - sudo luarocks install lua-websockets-core --server=http://rocks.moonscript.org/dev
   - sudo luarocks install lluv --server=http://rocks.moonscript.org/dev UV_DIR=$TRAVIS_BUILD_DIR/libuv
-  - sudo luarocks install luasocket
 
 install:
   - sudo luarocks make rockspecs/lluv-websocket-scm-0.rockspec
@@ -27,6 +32,9 @@ install:
 script: 
   - cd test
   - lua test.lua
+  - wstest -m fuzzingserver &
+  - sleep 5
+  - lua ./autobahn_client_test.lua
 
 # after_success:
 #   - luacov-coveralls -j c.report.json
