--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,13 @@ script:
   - wstest -m fuzzingserver &
   - sleep 5
   - lua -lluacov ./autobahn_client_test.lua
-  - lua -lluacov ./autobahn_server_test.lua
+  - killall wstest
+  - wstest -m fuzzingserver -s fuzzingserver_wss.json &
+  - sleep 5
+  - lua -lluacov ./autobahn_client_test.lua wss://127.0.0.1:9001
+  - killall wstest
+  - lua -lluacov ./autobahn_server_test.lua ws  127.0.0.1 9002
+  - lua -lluacov ./autobahn_server_test.lua wss 127.0.0.1 9002
 
 after_success:
   - luacov-coveralls -v
