--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ env:
     - LUAROCKS=2.2.0
   matrix:
     - LUA=lua5.1
-    # - LUA=lua5.2
+    - LUA=lua5.2
     # - LUA=lua5.3
     # - LUA=luajit
 
