--- a/.travis.yml
+++ b/.travis.yml
@@ -21,13 +21,23 @@ before_install:
   - bash .travis/setup_lua.sh
   - bash .travis/setup_uv.sh
   - sudo luarocks install luacov-coveralls
-  # - sudo luarocks install lua-websockets-core --server=http://rocks.moonscript.org/dev
-  - sudo apt-get install libev-dev
+  # lua-websockets deps
+  - sudo luarocks install struct
+  - sudo luarocks install luasocket
+  - if [ "$LUA" == "lua5.1" ]; then
+      sudo luarocks install bit32;
+    fi
+  - if [ "$LUA" == "lua5.3" ]; then
+      sudo luarocks install bit32;
+    fi
+  # lua-websockets
   - git clone https://github.com/moteus/lua-websockets.git -b fix-lua52-compat
   - cd lua-websockets
-  - sudo luarocks make rockspecs/lua-websockets-scm-1.rockspec
+  - sudo luarocks make rockspecs/lua-websockets-scm-1.rockspec --deps-mode=none
   - cd $TRAVIS_BUILD_DIR
+  # - sudo luarocks install lua-websockets-core --server=http://rocks.moonscript.org/dev --deps-mode=none
   - sudo luarocks install lluv --server=http://rocks.moonscript.org/dev UV_DIR=$TRAVIS_BUILD_DIR/libuv
+  # lua-openssl
   - git clone --depth=1 --recursive https://github.com/zhaozg/lua-openssl.git
   - cd lua-openssl
   - sudo luarocks make rockspecs/openssl-scm-1.rockspec
