--- a/.travis.yml
+++ b/.travis.yml
@@ -54,6 +54,7 @@ script:
   - wstest -m fuzzingserver &
   - sleep 10
   - lua -lluacov ./autobahn_client_test.lua ws://127.0.0.1:9001
+  - lua -lluacov ./autobahn_wclient_test.lua ws://127.0.0.1:9001
   - killall wstest
   - wstest -m fuzzingserver -s fuzzingserver_wss.json &
   - sleep 10
