--- a/.travis.yml
+++ b/.travis.yml
@@ -62,6 +62,7 @@ script:
   - killall wstest
   - lua -lluacov ./autobahn_server_test.lua ws://127.0.0.1:9002
   - lua -lluacov ./autobahn_server_test.lua wss://127.0.0.1:9002
+  - lua -lluacov ./autobahn_wserver_test.lua ws://127.0.0.1:9002
 
 after_success:
   - luacov-coveralls -v
