--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,9 @@ env:
     - LUAROCKS=2.2.0
   matrix:
     - LUA=lua5.1
-    # - LUA=lua5.2
+    - LUA=lua5.2
     # - LUA=lua5.3
-    # - LUA=luajit
+    - LUA=luajit
 
 branches:
   only:
