Update Travis files.

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ before_install:
   - bash .travis/setup_uv.sh
   - bash .travis/setup_openssl.sh
   - luarocks install lluv-ssl UV_DIR=$TRAVIS_BUILD_DIR/libuv
-  - luarocks install lbase64
+  - luarocks install --server=http://luarocks.org/manifests/moteus lbase64
   - if [ "$LUA" == "lua 5.1" ]; then
       luarocks install bit32;
     fi
