--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,10 @@ sudo: false
 env:
   matrix:
     - LUA="lua 5.1"
-    - LUA="lua 5.2"
-    - LUA="lua 5.3"
-    - LUA="luajit 2.0"
-    - LUA="luajit 2.1"
+    # - LUA="lua 5.2"
+    # - LUA="lua 5.3"
+    # - LUA="luajit 2.0"
+    # - LUA="luajit 2.1"
 
 branches:
   only:
@@ -39,6 +39,7 @@ install:
 before_script:
   - pip install --user autobahntestsuite
   - luarocks install luacov-coveralls
+  - luarocks install lua-cjson
 
 script: 
   - cd test
