Add. rol/ror to bit library.

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,9 +28,11 @@ before_install:
   - bash .travis/setup_openssl.sh
   - luarocks install lluv-ssl UV_DIR=$TRAVIS_BUILD_DIR/libuv
   - luarocks install --server=http://luarocks.org/manifests/moteus lbase64
+  - luarocks install lmd5
   - if [ "$LUA" == "lua 5.1" ]; then
       luarocks install bit32;
     fi
+  - luarocks install --server=http://luarocks.org/dev lua-websockets-core --deps-mode=none
 
 install:
   - luarocks make rockspecs/lluv-websocket-scm-0.rockspec --deps-mode=none
