--- a/.travis.yml
+++ b/.travis.yml
@@ -63,11 +63,13 @@ script:
   - sleep 10
   - lua -lluacov ./autobahn_client_test.lua ws://127.0.0.1:9001
   - lua -lluacov ./autobahn_wclient_test.lua ws://127.0.0.1:9001
+  - lua -lluacov ./autobahn_co_client_test.lua ws://127.0.0.1:9001
   - killall wstest
   - wstest -m fuzzingserver -s fuzzingserver_wss.json &
   - sleep 10
   - lua -lluacov ./autobahn_client_test.lua wss://127.0.0.1:9001
   - lua -lluacov ./autobahn_wclient_test.lua wss://127.0.0.1:9001
+  - lua -lluacov ./autobahn_co_client_test.lua wss://127.0.0.1:9001
   - killall wstest
   - lua -lluacov ./autobahn_server_test.lua ws://127.0.0.1:9002
   - lua -lluacov ./autobahn_server_test.lua wss://127.0.0.1:9002
