--- a/.travis.yml
+++ b/.travis.yml
@@ -63,8 +63,6 @@ script:
   - wstest -m fuzzingserver &
   - sleep 10
   - lua -lluacov ./autobahn_client_test.lua ws://127.0.0.1:9001
-  - lua -lluacov ./autobahn_client_test.lua ws://127.0.0.1:9001 *f
-  - lua -lluacov ./autobahn_client_test.lua ws://127.0.0.1:9001 *t
   - lua -lluacov ./autobahn_wclient_test.lua ws://127.0.0.1:9001
   - lua -lluacov ./autobahn_co_client_test.lua ws://127.0.0.1:9001
   - killall wstest
@@ -75,6 +73,8 @@ script:
   - lua -lluacov ./autobahn_co_client_test.lua wss://127.0.0.1:9001
   - killall wstest
   - lua -lluacov ./autobahn_server_test.lua ws://127.0.0.1:9002
+  - lua -lluacov ./autobahn_server_test.lua ws://127.0.0.1:9002 '*f'
+  - lua -lluacov ./autobahn_server_test.lua ws://127.0.0.1:9002 '*t'
   - lua -lluacov ./autobahn_server_test.lua wss://127.0.0.1:9002
   - lua -lluacov ./autobahn_wserver_test.lua ws://127.0.0.1:9002
   - lua -lluacov ./autobahn_wserver_test.lua wss://127.0.0.1:9002
