--- a/.travis.yml
+++ b/.travis.yml
@@ -72,7 +72,9 @@ script:
   - luarocks install lzlib && lunit.sh test_deflate.lua
 
   # test deflate with lua-zlib
-  - luarocks remove lzlib && luarocks install lua-zlib && lunit.sh test_deflate.lua
+  - if [ "$LUA" != "lua 5.3" ]; then
+    luarocks remove lzlib && luarocks install lua-zlib && lunit.sh test_deflate.lua;
+    fi
 
   #                         Client tests
   # - wstest -m fuzzingserver &
