--- a/.travis.yml
+++ b/.travis.yml
@@ -58,7 +58,7 @@ install:
   - luarocks make rockspecs/lua-websockets-lluv-scm-0.rockspec --deps-mode=none
 
 before_script:
-  # - pip install --user autobahntestsuite
+  - pip install --user autobahntestsuite
   - luarocks show luacov-coveralls || luarocks install luacov-coveralls
   - luarocks show lua-cjson || luarocks install lua-cjson
   - luarocks show lunitx || luarocks install lunitx
@@ -77,36 +77,36 @@ script:
     fi
 
   #                         Client tests
-  # - wstest -m fuzzingserver &
-  # - sleep 10
-  # - lua -lluacov ./autobahn_client_test.lua ws://127.0.0.1:9001
-  # - lua -lluacov ./autobahn_wclient_test.lua ws://127.0.0.1:9001
-  # - lua -lluacov ./autobahn_co_client_test.lua ws://127.0.0.1:9001
-  # - killall wstest
+  - wstest -m fuzzingserver &
+  - sleep 10
+  - lua -lluacov ./autobahn_client_test.lua ws://127.0.0.1:9001
+  - lua -lluacov ./autobahn_wclient_test.lua ws://127.0.0.1:9001
+  - lua -lluacov ./autobahn_co_client_test.lua ws://127.0.0.1:9001
+  - killall wstest
 
   #                         Client tests (WSS)
-  # - wstest -m fuzzingserver -s fuzzingserver_wss.json &
-  # - sleep 10
-  # - lua -lluacov ./autobahn_client_test.lua wss://127.0.0.1:9001
-  # - lua -lluacov ./autobahn_wclient_test.lua wss://127.0.0.1:9001
-  # - lua -lluacov ./autobahn_co_client_test.lua wss://127.0.0.1:9001
-  # - killall wstest
+  - wstest -m fuzzingserver -s fuzzingserver_wss.json &
+  - sleep 10
+  - lua -lluacov ./autobahn_client_test.lua wss://127.0.0.1:9001
+  - lua -lluacov ./autobahn_wclient_test.lua wss://127.0.0.1:9001
+  - lua -lluacov ./autobahn_co_client_test.lua wss://127.0.0.1:9001
+  - killall wstest
 
   #                         Server tests
-  # - lua -lluacov ./autobahn_server_test.lua ws://127.0.0.1:9002
-  # - lua -lluacov ./autobahn_wserver_test.lua ws://127.0.0.1:9002
-  # - lua -lluacov ./autobahn_co_server_test.lua ws://127.0.0.1:9002
+  - lua -lluacov ./autobahn_server_test.lua ws://127.0.0.1:9002
+  - lua -lluacov ./autobahn_wserver_test.lua ws://127.0.0.1:9002
+  - lua -lluacov ./autobahn_co_server_test.lua ws://127.0.0.1:9002
 
   #                         Server tests (WSS)
-  # - lua -lluacov ./autobahn_server_test.lua wss://127.0.0.1:9002
-  # - lua -lluacov ./autobahn_wserver_test.lua wss://127.0.0.1:9002
-  # - lua -lluacov ./autobahn_co_server_test.lua wss://127.0.0.1:9002
+  - lua -lluacov ./autobahn_server_test.lua wss://127.0.0.1:9002
+  - lua -lluacov ./autobahn_wserver_test.lua wss://127.0.0.1:9002
+  - lua -lluacov ./autobahn_co_server_test.lua wss://127.0.0.1:9002
 
   #                         Read mode tests
-  # - lua -lluacov ./autobahn_server_test.lua ws://127.0.0.1:9002 '*f'
-  # - lua -lluacov ./autobahn_server_test.lua ws://127.0.0.1:9002 '*t'
-  # - lua -lluacov ./autobahn_server_test.lua ws://127.0.0.1:9002 '*s' 'chunk'
-  # - lua -lluacov ./autobahn_co_server_test.lua ws://127.0.0.1:9002 '*r'
+  - lua -lluacov ./autobahn_server_test.lua ws://127.0.0.1:9002 '*f'
+  - lua -lluacov ./autobahn_server_test.lua ws://127.0.0.1:9002 '*t'
+  - lua -lluacov ./autobahn_server_test.lua ws://127.0.0.1:9002 '*s' 'chunk'
+  - lua -lluacov ./autobahn_co_server_test.lua ws://127.0.0.1:9002 '*r'
 
 after_success:
   - luacov-coveralls -v
