Fix. Install bit32 library to test Lua 5.3

--- a/.travis.yml
+++ b/.travis.yml
@@ -49,6 +49,10 @@ before_install:
   - if [ "$LUA" == "lua 5.1" ]; then
       luarocks show bit32 || luarocks install bit32;
     fi
+  # required for lua-websockets
+  - if [ "$LUA" == "lua 5.3" ]; then
+      luarocks show bit32 || luarocks install bit32;
+    fi
   - luarocks show lua-websockets-core || luarocks install lua-websockets-core --server=http://luarocks.org/dev --deps-mode=none
 
 install:
